<resources>
    <string name="app_name">Global Feed</string>
    <string name="title_activity_main">Global Feed</string>
    <string name="search">Search message</string>
    <string name="PostDate">Post Date:</string>
    <string name="username">Username: </string>
    <string name="likes">Likes: </string>
    <string name="message">Message: </string>
    <string name="delete">Delete</string>
    <string name="favourite">Favourites</string>
    <string name="loginMenu">Menu</string>
    <string name="logout">Logout</string>
    <string name="add_post">Add Post</string>
    <string name="preferences">Preferences</string>
    <string name="registerButton">Post!</string>
    <string name="backButton">Return</string>
    <string name="editButton">Edit post</string>
    <string name="Login">Login</string>
    <string name="loginUsername">Username: </string>
    <string name="loginPassword">Password: </string>
    <string name="loginForgot">Forgot the password?</string>
    <string name="loginButton">Login</string>
    <string name="loginName">Name: </string>
    <string name="loginBio">Biography</string>
    <string name="loginPhone">Phone number: </string>
    <string name="register">Register</string>
</resources>