<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AddPostView">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/message" />

        <EditText
            android:id="@+id/registerPostMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="8"
            android:inputType="text"
            android:minHeight="200dp" />

        <Button
            android:id="@+id/registerPostRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="register"
            android:text="@string/registerButton" />

        <Button
            android:id="@+id/registerPostBackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/backButton" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>